# causal-graph-lab

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-07-16-causal-graph-lab-v1.md
docs/superpowers/specs/: 2026-07-16-causal-graph-lab-design.md  2026-07-16-contextualized-cases-design.md  2026-07-17-references-modeling-depth-design.md
examples/: 01_dag_basics.py  01_smoking_and_cancer.py  02_confounding_backdoor_simulation.py  03_vaccination_and_infection.py  README.md
notebooks/: 00_intro.ipynb  01_confounding_and_backdoor.ipynb  README.md
references/: 01-dags-and-scm.md  02-d-separation.md  03-backdoor.md  04-do-operator.md  README.md  reading-list.md
src/causal_graph_lab/: __init__.py
src/causal_graph_lab/core/: __init__.py  dag.py
tests/: test_dag.py  test_examples.py
